Fix round corners of footer and header not visible

--- a/style.css
+++ b/style.css
@@ -342,7 +342,6 @@ a:hover {
 #contact,
 .footer {
   margin: 0;
-  border-radius: 0;
 }
 .skills-grid {
   padding: 1rem 0;
